Revision history for {{$dist->name}}

{{$NEXT}}
          PruneCruft also excludes the _Inline/ directory and MYMETA.json

4.300008  2012-02-16 17:28:34 America/New_York
          work around qr//m bug in 5.8.8 and earlier (thanks, Randy Stauner!)

          Fix to MakeMaker plugin: use separate scope for code that changes
          namespace, when inserting ShareDir code. (RT#74788) (Karen Etheridge)

4.300007  2012-02-02 22:23:05 America/New_York
          Remove configs beginning with ':' from argument list before
          constructing that config; fixes issue where :version was
          being passed to a plugin that had a strict constructor. (Karen
          Etheridge)

4.300006  2011-12-30 15:28:34 America/New_York
          New methods dist_basename & archive_filename allow plugins
          to reliably get that information.  This makes TestRelease
          testable. (Thanks, Kent Fredric & Christopher J. Madsen!)

          Your PAUSE password will now no be echoed if entered at the
          prompt, on most operating systems (Thanks, Mike Doherty!)

          replace use of Version::Requirements with CPAN::Meta::Requirements,
          its replacement

4.300005  2011-12-13 08:49:19 America/New_York
          Prereqs now actually understands -relationship as documented
          in 4.300004.  Also, it throws an error if you give it a
          plugin name that does not specify a relationship (Thanks,
          Christopher J. Madsen!)

4.300004  2011-12-12 23:34:30 America/New_York
          a new FileFinder plugin has been added, FileFinder::Filter
          (Thanks, Christopher J. Madsen!)

          AutoPrereqs can now be told to determine configure_requires
          (Thanks, Christopher J. Madsen!)

          the (lack of) order of check of authordeps is now a bit more
          predictible:
          - plugins declared with "; authordep" lines are loaded before others
          - inc:: plugins are checked first and in ASCII order